--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
-python:
-    - "2.7"
+
+addons:
+    apt:
+        packages:
+            - mariadb
 
 install:
     - ./install_deps_ubuntu.sh
