--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,11 @@ Flask-WTF==0.12
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+MySQL-python==1.2.5
 numpy==1.11.0
 pandas==0.18.1
+py==1.4.31
+pytest==2.9.2
 python-dateutil==2.5.3
 pytz==2016.4
 six==1.10.0
