--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,7 @@
 language: python
 
 addons:
-    apt:
-        packages:
-            - mariadb
+    mariadb: '10.1'
 
 install:
     - pip install -r requirements.txt
