--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,34 @@
+alabaster==0.7.8
+Babel==2.3.4
+blinker==1.4
 click==6.6
+coverage==4.1
+docutils==0.12
 enum34==1.1.6
 Flask==0.11.1
+Flask-Login==0.3.2
+Flask-Mail==0.9.1
+Flask-Principal==0.4.0
+Flask-Security==1.7.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
+imagesize==0.7.1
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
 MySQL-python==1.2.5
 numpy==1.11.0
 pandas==0.18.1
+passlib==1.6.5
 py==1.4.31
+Pygments==2.1.3
 pytest==2.9.2
+pytest-cov==2.2.1
 python-dateutil==2.5.3
 pytz==2016.4
 six==1.10.0
+snowballstemmer==1.2.1
+Sphinx==1.4.4
 SQLAlchemy==1.0.13
 Werkzeug==0.11.10
 WTForms==2.1
