Added db setup to .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ addons:
     mariadb: '10.1'
 
 install:
-    - pip install -r requirements.txt
+    - mysql -u root < setup_db.sql
 
 script:
     - ./runtests.py
