--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,6 @@ install:
 script:
 - "./runtests.py"
 before_install:
-- openssl aes-256-cbc -K $encrypted_e1f40c693a59_key -iv $encrypted_e1f40c693a59_iv
-  -in deploy_key.enc -out ~\/.ssh/deploy_key -d
+- openssl aes-256-cbc -K $encrypted_e1f40c693a59_key -iv $encrypted_e1f40c693a59_iv -in deploy_key.enc -out deploy_key -d
 after_success:
 - bash scripts/deploy.sh
