--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,16 @@
 alabaster==0.7.8
+astroid==1.4.7
 Babel==2.3.4
+backports.functools-lru-cache==1.2.1
 blinker==1.4
 click==6.6
-coverage==4.1
+configparser==3.5.0
+coverage==4.0.3
+coveralls==1.1
+docopt==0.6.2
 docutils==0.12
 enum34==1.1.6
+flake8==2.6.2
 Flask==0.11.1
 Flask-Login==0.3.2
 Flask-Mail==0.9.1
@@ -13,21 +19,34 @@ Flask-Security==1.7.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
 imagesize==0.7.1
+isort==4.2.5
 itsdangerous==0.24
 Jinja2==2.8
+lazy-object-proxy==1.2.2
 MarkupSafe==0.23
+mccabe==0.5.0
 MySQL-python==1.2.5
 passlib==1.6.5
 py==1.4.31
+pycodestyle==2.0.0
+pyflakes==1.2.3
 Pygments==2.1.3
+pylint==1.6.1
 pytest==2.9.2
 pytest-cov==2.3.0
+pytest-flake8==0.5
+pytest-pylint==0.5.0
+python-coveralls==2.7.0
 python-dateutil==2.5.3
 pytz==2016.4
+PyYAML==3.11
+requests==2.10.0
+sh==1.11
 six==1.10.0
 snowballstemmer==1.2.1
 Sphinx==1.4.4
 SQLAlchemy==1.0.13
 Werkzeug==0.11.10
+wrapt==1.10.8
 WTForms==2.1
 xlrd==1.0.0
