--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ click==6.6
 configparser==3.5.0
 coverage==4.1
 coveralls==1.1
+decorator==4.0.10
 docopt==0.6.2
 flake8==2.6.2
 Flask==0.11.1
@@ -14,6 +15,8 @@ Flask-Principal==0.4.0
 Flask-Security==1.7.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
+infinity==1.4
+intervals==0.8.0
 isort==4.2.5
 itsdangerous==0.24
 Jinja2==2.8
@@ -33,6 +36,10 @@ pytest-pylint==0.5.0
 requests==2.10.0
 six==1.10.0
 SQLAlchemy==1.0.14
+SQLAlchemy-Utils==0.32.9
+validators==0.10.3
 Werkzeug==0.11.10
 wrapt==1.10.8
 WTForms==2.1
+WTForms-Alchemy==0.16.1
+WTForms-Components==0.10.0
