--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ before_install:
     - openssl aes-256-cbc -K $encrypted_e1f40c693a59_key -iv $encrypted_e1f40c693a59_iv -in deploy_key.enc -out deploy_key -d
 
 after_success:
-    - coveralls
+    - bash <(curl -s https://codecov.io/bash)
     - bash scripts/deploy.sh
