--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,8 @@ coverage==4.1
 coveralls==1.1
 decorator==4.0.10
 docopt==0.6.2
+factory-boy==2.7.0
+fake-factory==0.5.9
 flake8==2.6.2
 Flask==0.11.1
 Flask-Login==0.3.2
@@ -17,6 +19,7 @@ Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
 infinity==1.4
 intervals==0.8.0
+ipaddress==1.0.16
 isort==4.2.5
 itsdangerous==0.24
 Jinja2==2.8
@@ -33,6 +36,7 @@ pytest==2.9.2
 pytest-cov==2.3.0
 pytest-flake8==0.5
 pytest-pylint==0.5.0
+python-dateutil==2.5.3
 requests==2.10.0
 six==1.10.0
 SQLAlchemy==1.0.14
