--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ Flask-Principal==0.4.0
 Flask-Security==1.7.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
+funcsigs==1.0.2
 infinity==1.4
 intervals==0.8.0
 ipaddress==1.0.16
@@ -26,8 +27,10 @@ Jinja2==2.8
 lazy-object-proxy==1.2.2
 MarkupSafe==0.23
 mccabe==0.5.0
+mock==2.0.0
 MySQL-python==1.2.5
 passlib==1.6.5
+pbr==1.10.0
 py==1.4.31
 pycodestyle==2.0.0
 pyflakes==1.2.3
@@ -35,6 +38,7 @@ pylint==1.6.1
 pytest==2.9.2
 pytest-cov==2.3.0
 pytest-flake8==0.5
+pytest-mock==1.1
 pytest-pylint==0.5.0
 python-dateutil==2.5.3
 requests==2.10.0
