--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ install:
 
 script:
     - ./runtests.py
+    - cd docs; make html;
 
 before_install:
     - openssl aes-256-cbc -K $encrypted_e1f40c693a59_key -iv $encrypted_e1f40c693a59_iv -in deploy_key.enc -out deploy_key -d
