--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
+alabaster==0.7.9
 astroid==1.4.7
+Babel==2.3.4
 backports.functools-lru-cache==1.2.1
 blinker==1.4
 click==6.6
@@ -7,6 +9,7 @@ coverage==4.1
 coveralls==1.1
 decorator==4.0.10
 docopt==0.6.2
+docutils==0.12
 et-xmlfile==1.0.1
 factory-boy==2.7.0
 fake-factory==0.5.9
@@ -19,6 +22,7 @@ Flask-Security==1.7.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
 funcsigs==1.0.2
+imagesize==0.7.1
 infinity==1.4
 intervals==0.8.0
 ipaddress==1.0.16
@@ -38,6 +42,7 @@ pockets==0.3
 py==1.4.31
 pycodestyle==2.0.0
 pyflakes==1.2.3
+Pygments==2.1.3
 pylint==1.6.1
 pytest==2.9.2
 pytest-cov==2.3.0
@@ -45,8 +50,11 @@ pytest-flake8==0.5
 pytest-mock==1.1
 pytest-pylint==0.5.0
 python-dateutil==2.5.3
+pytz==2016.6.1
 requests==2.10.0
 six==1.10.0
+snowballstemmer==1.2.1
+Sphinx==1.4.5
 sphinxcontrib-napoleon==0.5.2
 SQLAlchemy==1.0.14
 SQLAlchemy-Utils==0.32.9
