--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,6 @@ before_install:
 after_success:
     - bash <(curl -s https://codecov.io/bash)
     - bash scripts/deploy.sh
+
+notifications:
+    email: false # SHUT UP TRAVIS
