--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,19 @@
 alabaster==0.7.9
-astroid==1.4.8
+astroid==1.4.7
 Babel==2.3.4
 backports.functools-lru-cache==1.2.1
 blinker==1.4
 click==6.6
 configparser==3.5.0
-coverage==4.2
+coverage==4.1
+coveralls==1.1
 decorator==4.0.10
+docopt==0.6.2
 docutils==0.12
 et-xmlfile==1.0.1
 factory-boy==2.7.0
 fake-factory==0.5.9
-flake8==3.0.2
+flake8==2.6.2
 Flask==0.11.1
 Flask-Login==0.3.2
 Flask-Mail==0.9.1
@@ -41,11 +43,11 @@ py==1.4.31
 pycodestyle==2.0.0
 pyflakes==1.2.3
 Pygments==2.1.3
-pylint==1.6.4
+pylint==1.6.1
 pytest==2.9.2
 pytest-cov==2.3.0
-pytest-flake8==0.6
-pytest-pylint==0.6.0
+pytest-flake8==0.5
+pytest-pylint==0.5.0
 python-dateutil==2.5.3
 pytz==2016.6.1
 requests==2.10.0
