--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,9 @@ astroid==1.4.8
 Babel==2.3.4
 backports.functools-lru-cache==1.2.1
 blinker==1.4
+boto==2.42.0
 click==6.6
+cmd2==0.6.8
 configparser==3.5.0
 coverage==4.2
 coveralls==1.1
@@ -23,6 +25,11 @@ Flask-Security==1.7.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
 funcsigs==1.0.2
+fuzzywuzzy==0.11.1
+gitdb==0.6.4
+GitPython==2.0.7
+gnureadline==6.3.3
+gunicorn==19.6.0
 imagesize==0.7.1
 infinity==1.4
 intervals==0.8.0
@@ -40,11 +47,14 @@ openpyxl==2.3.5
 passlib==1.6.5
 pbr==1.10.0
 pockets==0.3
+PsiTurk==2.1.2
+psutil==4.3.0
 py==1.4.31
 pycodestyle==2.0.0
 pyflakes==1.2.3
 Pygments==2.1.3
 pylint==1.6.4
+pyparsing==2.1.5
 pytest==2.9.2
 pytest-cov==2.3.0
 pytest-flake8==0.6
@@ -52,12 +62,17 @@ pytest-pylint==0.6.0
 python-dateutil==2.5.3
 pytz==2016.6.1
 requests==2.10.0
+setproctitle==1.1.10
+sh==1.11
 six==1.10.0
+smmap==0.9.0
 snowballstemmer==1.2.1
 Sphinx==1.4.4
 sphinxcontrib-napoleon==0.5.2
 SQLAlchemy==1.0.14
 SQLAlchemy-Utils==0.32.9
+ua-parser==0.7.1
+user-agents==1.0.1
 validators==0.10.3
 Werkzeug==0.11.10
 wrapt==1.10.8
