Adding hit posting code

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [pytest]
 flake8-ignore = populate_db.py ALL
     docs/* ALL
+    instance/* ALL
     config.py E501  ; Long lines happen in the config file
