--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astroid==1.4.7
 Babel==2.3.4
 backports.functools-lru-cache==1.2.1
 blinker==1.4
+boto==2.42.0
 click==6.6
 configparser==3.5.0
 coverage==4.1
@@ -51,6 +52,7 @@ pytest-mock==1.1
 pytest-pylint==0.5.0
 python-dateutil==2.5.3
 pytz==2016.6.1
+PyYAML==3.11
 requests==2.10.0
 six==1.10.0
 snowballstemmer==1.2.1
