--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ alabaster==0.7.9
 astroid==1.4.7
 Babel==2.3.4
 backports.functools-lru-cache==1.2.1
+bcrypt==3.1.0
 blinker==1.4
 boto==2.42.0
+cffi==1.7.0
 click==6.6
 configparser==3.5.0
 coverage==4.1
@@ -42,6 +44,7 @@ pbr==1.10.0
 pockets==0.3
 py==1.4.31
 pycodestyle==2.0.0
+pycparser==2.14
 pyflakes==1.2.3
 Pygments==2.1.3
 pylint==1.6.1
