--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ install:
     - pip install -r requirements.txt
 
 script:
-    - ./runtests.py
+    - manage.py test 
     - make -C docs/ html
 
 before_install:
