Trying to fix travis db initialization

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,8 @@ addons:
     ssh_known_hosts: 104.236.112.220
 
 install:
-    - mysql -u root < setup_db.sql
     - pip install -r requirements.txt
+    - ./manage.py --config testing create-db -u root
 
 script:
     - ./manage.py test 
