--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 alabaster==0.7.9
+alembic==0.8.7
 astroid==1.4.7
 Babel==2.3.4
 backports.functools-lru-cache==1.2.1
@@ -20,7 +21,9 @@ flake8==2.6.2
 Flask==0.11.1
 Flask-Login==0.3.2
 Flask-Mail==0.9.1
+Flask-Migrate==2.0.0
 Flask-Principal==0.4.0
+Flask-Script==2.0.5
 Flask-Security==1.7.5
 Flask-SQLAlchemy==2.1
 Flask-WTF==0.12
@@ -34,6 +37,7 @@ itsdangerous==0.24
 jdcal==1.2
 Jinja2==2.8
 lazy-object-proxy==1.2.2
+Mako==1.0.4
 MarkupSafe==0.23
 mccabe==0.5.0
 mock==2.0.0
@@ -54,6 +58,7 @@ pytest-flake8==0.5
 pytest-mock==1.1
 pytest-pylint==0.5.0
 python-dateutil==2.5.3
+python-editor==1.0.1
 pytz==2016.6.1
 PyYAML==3.11
 requests==2.10.0
