--- a/setup.cfg
+++ b/setup.cfg
@@ -1,5 +1,3 @@
 [pytest]
-flake8-ignore = populate_db.py ALL
-    docs/* ALL
-    instance/* ALL
-    config.py E501  ; Long lines happen in the config file
+addopts=--ignore=migrations/ --ignore=docs/ --ignore=instance/
+flake8-ignore = config.py E501  ; Long lines happen in the config file
